updates from web submission, adds two new academies

--- a/_includes/college-credit/biotechnology.html
+++ b/_includes/college-credit/biotechnology.html
@@ -1,2 +1,1 @@
-<p>Students who successfully complete the Biotechnology Academy program sequence, with a grade of B or higher in academy
-courses, may be eligible for credits at Montgomery College.</p>
+<p>Students who successfully complete the Biotechnology Academy program sequence, with a grade of B or higher in academy courses, may be eligible for credits at Montgomery College. Students are encouraged to sit for the AP Biology exam for college credit.</p>
