--- a/_includes/course-schedules/aerospace-engineering.html
+++ b/_includes/course-schedules/aerospace-engineering.html
@@ -28,7 +28,7 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>World Language</td>
-		<td colspan="2" class="academy-course">Aerospace I G/T 688M at the ARL</td>
+		<td colspan="2" class="academy-course">Aerospace I - G/T at the ARL</td>
 	</tr>
 	<tr>
 		<th scope="row">Eleventh Grade</th>
@@ -36,7 +36,7 @@
 		<td class="required">Mathematics required</td>
 		<td class="academy-course">Chemistry required</td>
 		<td class="required">Social Studies required</td>
-		<td colspan="3" class="academy-course">Aerospace II G/T 68901 at the ARL</td>
+		<td colspan="3" class="academy-course">Aerospace II - G/T at the ARL</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -45,7 +45,7 @@
 		<td class="academy-course">Physics recommended</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td>Elective available</td>
+    	<td>Elective available</td>
 		<td>Elective available</td>
 	</tr>
 </table>
