--- a/_includes/course-schedules/agricultural.html
+++ b/_includes/course-schedules/agricultural.html
@@ -1,6 +1,6 @@
 <h1>Suggested Course Schedule</h1>
 <table class="table academy">
-	<caption>Below is a suggested high school course schedule for students interested in the Visual Communications Academy</caption>
+	<caption>Below is a suggested high school course schedule for students interested in the Agricultural Science Academy</caption>
 	<tr>
  	 <th scope="col">Grade Level</th>
  	 <th scope="col">Course 1</th>
@@ -19,7 +19,7 @@
 		<td class="required">Social Studies required</td>
 		<td class="required">Fitness &amp; Health required</td>
 		<td class="required">Technology Education required</td>
-		<td>Elective available</td>
+		<td>Fine Arts available</td>
 	</tr>
 	<tr>
 		<th scope="row">Tenth Grade</th>
@@ -27,7 +27,7 @@
 		<td class="required">Mathematics required</td>
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
-		<td class="academy-course">Art I 6000</td>
+		<td class="required">Fine Arts required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
 	</tr>
@@ -35,17 +35,17 @@
 		<th scope="row">Eleventh Grade</th>
 		<td class="required">English required</td>
 		<td class="required">Mathematics required</td>
-		<td class="required">Science required</td>
+		<td class="required">Chemistry</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Graphic Design I G/T 845M or Animation and Interactive Media I 81001</td>
+		<td colspan="2" class="academy-course">Agricultural Science I</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
 		<td class="required">English required</td>
 		<td class="required">Mathematics required</td>
+		<td class="required">Science Elective required</td>
 		<td>Elective available</td>
-		<td>Elective available</td>
-		<td colspan="3" class="academy-course">Advanced Graphic Design G/T 849M or Animation and Interactive Media 81101</td>
+		<td colspan="3" class="academy-course">Agricultural Science II - G/T</td>
 	</tr>
 </table>
