--- a/_includes/course-schedules/architectural-design.html
+++ b/_includes/course-schedules/architectural-design.html
@@ -38,7 +38,7 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Architectural Design 678M</td>
+		<td colspan="2" class="academy-course">Architectural Design</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -46,6 +46,6 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-		<td colspan="3" class="academy-course">Advanced Architectural Design 679M</td>
+		<td colspan="3" class="academy-course">Advanced Architectural Design</td>
 	</tr>
 </table>
