--- a/_includes/course-schedules/automotive-technology.html
+++ b/_includes/course-schedules/automotive-technology.html
@@ -38,7 +38,7 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Automotive Technology I 856M</td>
+		<td colspan="2" class="academy-course">Automotive Technology I</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -46,6 +46,6 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td colspan="3" class="academy-course">Automotive Technology II 857M</td>
+    	<td colspan="3" class="academy-course">Automotive Technology II</td>
 	</tr>
 </table>
