--- a/_includes/course-schedules/biotechnology.html
+++ b/_includes/course-schedules/biotechnology.html
@@ -35,10 +35,10 @@
 		<th scope="row">Eleventh Grade</th>
 		<td class="required">English required</td>
 		<td class="required">Mathematics required</td>
-		<td class="academy-course">Chemistry</td>
+		<td class="required">Chemistry</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Biotechnology I G/T 835M</td>
+		<td colspan="2" class="academy-course">Biotechnology I - G/T</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -46,6 +46,6 @@
 		<td class="required">Mathematics required</td>
 		<td>Science Elective available</td>
 		<td>Elective available</td>
-    <td colspan="3" class="academy-course">Biotechnology II G/T 839M</td>
+    <td colspan="3" class="academy-course">Biotechnology II - G/T</td>
 	</tr>
 </table>
