--- a/_includes/course-schedules/career-research-development.html
+++ b/_includes/course-schedules/career-research-development.html
@@ -39,7 +39,7 @@
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
     <td>Elective available</td>
-		<td class="academy-course">CRD I 6880</td>
+		<td class="academy-course">CRD I</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -47,7 +47,7 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td class="academy-course">CRD II 6881</td>
-		<td colspan="2" class="academy-course">Site-Based Work Experience 6885 -- 2 credits 6886 -- 3 credits 6887 -- 4 credits</td>
+    <td class="academy-course">CRD II</td>
+		<td colspan="2" class="academy-course">Site-Based Work Experience 6885 -- 2 credits -- 3 credits -- 4 credits</td>
 	</tr>
 </table>
