--- a/_includes/course-schedules/child-development.html
+++ b/_includes/course-schedules/child-development.html
@@ -38,8 +38,8 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-    <td>Elective available</td>
-		<td class="academy-course">Foundations of Curriculum and Instruction 6535</td>
+    	<td>Elective available</td>
+		<td class="academy-course">Foundations of Curriculum and Instruction</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -47,8 +47,8 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td>Elective available</td>
+    	<td>Elective available</td>
 		<td>Elective available</td>
-    <td class="academy-course">Field Experience in Education (Child Development Academy) 6571 - 6572 - 6573</td>
+    	<td class="academy-course">Field Experience in Education (Child Development Academy)</td>
 	</tr>
 </table>
