--- a/_includes/course-schedules/computer-programming.html
+++ b/_includes/course-schedules/computer-programming.html
@@ -29,7 +29,7 @@
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-		<td class="academy-course">Principles of Java Programming G/T 46001</td>
+		<td class="academy-course">Principles of Java Programming G/T</td>
 	</tr>
 	<tr>
 		<th scope="row">Eleventh Grade</th>
@@ -39,7 +39,7 @@
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
     <td>Elective available</td>
-		<td class="academy-course">Computer Science A-AP 465M</td>
+		<td class="academy-course">Computer Science A-AP</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -48,7 +48,7 @@
 		<td>Science Elective available</td>
 		<td>Elective available</td>
     <td>Elective available</td>
-		<td class="academy-course">Advanced Data Structures G/T 471M</td>
-    <td class="academy-course">Advanced Object Oriented Design G/T 472M</td>
+		<td class="academy-course">Advanced Data Structures G/T</td>
+    <td class="academy-course">Advanced Object Oriented Design G/T</td>
 	</tr>
 </table>
