--- a/_includes/course-schedules/construction-management.html
+++ b/_includes/course-schedules/construction-management.html
@@ -38,7 +38,7 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Construction Technology I 854M</td>
+		<td colspan="2" class="academy-course">Construction Technology I</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -46,6 +46,6 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td colspan="3" class="academy-course">Construction Technology II 858M</td>
+    <td colspan="3" class="academy-course">Construction Technology II</td>
 	</tr>
 </table>
