--- a/_includes/course-schedules/culinary-science.html
+++ b/_includes/course-schedules/culinary-science.html
@@ -29,7 +29,7 @@
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-		<td class="academy-course">Food and Nutrition Technology 6510</td>
+		<td class="academy-course">Food and Nutrition Technology</td>
 	</tr>
 	<tr>
 		<th scope="row">Eleventh Grade</th>
@@ -38,8 +38,8 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-    <td>Elective available</td>
-		<td class="academy-course">Culinary Sciences 6525</td>
+    	<td>Elective available</td>
+		<td class="academy-course">Culinary Sciences</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -47,8 +47,8 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td>Elective available</td>
-		<td class="academy-course">Business Course** or Culinary Internship 6528 - 1 credit or 6529 - 2 credits</td>
-    <td class="academy-course">Advanced Culinary Science and Restaurant Operations 657M</td>
+    	<td>Elective available</td>
+		<td class="academy-course">Business Course** or Culinary Internship - 1 credit or 2 credits</td>
+    	<td class="academy-course">Advanced Culinary Science and Restaurant Operations</td>
 	</tr>
 </table>
