--- a/_includes/course-schedules/cybersecurity-networking.html
+++ b/_includes/course-schedules/cybersecurity-networking.html
@@ -38,7 +38,7 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-    <td colspan="2" class="academy-course">Computer Networking I G/T 454M OR PC Software and Hardware 4561</td>
+    	<td colspan="2" class="academy-course">Computer Networking I - G/T OR PC Software and Hardware</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -46,6 +46,6 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td colspan="3" class="academy-course">Computer Networking II G/T 456M OR Networking Essentials-457M Honors</td>
+    <td colspan="3" class="academy-course">Computer Networking II - G/T OR Networking Essentials - Honors</td>
 	</tr>
 </table>
