--- a/_includes/course-schedules/engineering.html
+++ b/_includes/course-schedules/engineering.html
@@ -19,7 +19,7 @@
 		<td class="required">Social Studies required</td>
 		<td class="required">Fitness &amp; Health required</td>
 		<td>World Language</td>
-		<td class="academy-course">PLTW Engineering Design G/T 681M (Technology Education Graduation Credit)</td>
+		<td class="academy-course">PLTW Engineering Design - G/T (Technology Education Graduation Credit)</td>
 	</tr>
 	<tr>
 		<th scope="row">Tenth Grade</th>
@@ -29,7 +29,7 @@
 		<td class="required">Social Studies required</td>
 		<td>World Language</td>
 		<td>Fine Arts available</td>
-		<td class="academy-course">PLTW Principles of Engineering G/T 68001</td>
+		<td class="academy-course">PLTW Principles of Engineering - G/T</td>
 	</tr>
 	<tr>
 		<th scope="row">Eleventh Grade</th>
@@ -38,8 +38,8 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-    <td class="academy-course">PLTW Digital Electronics G/T 68601</td>
-		<td class="academy-course">PLTW Computer Integrated Manufacturing G/T 68501</td>
+    	<td class="academy-course">PLTW Digital Electronics - G/T</td>
+		<td class="academy-course">PLTW Computer Integrated Manufacturing - G/T</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -47,8 +47,8 @@
 		<td class="required">Mathematics required</td>
 		<td>Science Elective available</td>
 		<td>Elective available</td>
-    <td>Elective available</td>
+    	<td>Elective available</td>
 		<td>Elective available</td>
-    <td class="academy-course">PLTW Engineering Design and Development G/T 68701</td>
+    	<td class="academy-course">PLTW Engineering Design and Development - G/T</td>
 	</tr>
 </table>
