--- a/_includes/course-schedules/finance.html
+++ b/_includes/course-schedules/finance.html
@@ -38,14 +38,14 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Academy of Finance I G/T 566M</td>
+		<td colspan="2" class="academy-course">Academy of Finance I - G/T</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
 		<td class="required">English required</td>
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
-    <td>Elective available</td>
-		<td colspan="3" class="academy-course">Academy of Finance II G/T 567M</td>
+    	<td>Elective available</td>
+		<td colspan="3" class="academy-course">Academy of Finance II - G/T </td>
 	</tr>
 </table>
