--- a/_includes/course-schedules/health-professions.html
+++ b/_includes/course-schedules/health-professions.html
@@ -38,7 +38,7 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Foundations of Health Care – Honors 84101 (2)</td>
+		<td colspan="2" class="academy-course">Foundations of Health Care – Honors (2)</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -46,6 +46,6 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td colspan="3" class="academy-course">Clinical Research in Allied Health - Honors 87601 (3) Or Certified Nursing Assistant: Theory and Clinical 6896 (3) Or Emergency Medical Technician: Basic and Clinical 6888 (2)**</td>
+    	<td colspan="3" class="academy-course">Clinical Research in Allied Health - Honors (3) Or Certified Nursing Assistant: Theory and Clinical (3) Or Emergency Medical Technician: Basic and Clinical (2)**</td>
 	</tr>
 </table>
