--- a/_includes/course-schedules/homeland-security.html
+++ b/_includes/course-schedules/homeland-security.html
@@ -38,8 +38,8 @@
 		<td>Chemistry</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td class="academy-course">Foundations of Homeland Security and Emergency Preparedness 821M</td>
-		<td class="academy-course">Geographic Information Systems and Remote Sensing 822M</td>
+		<td class="academy-course">Foundations of Homeland Security and Emergency Preparedness</td>
+		<td class="academy-course">Geographic Information Systems and Remote Sensing</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -47,7 +47,7 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Advanced Geographic Information Systems and Remote Sensing 823M</td>
-    <td colspan="2" class="academy-course">Geospatial Applications Worksite Experience 824M</td>
+		<td colspan="2" class="academy-course">Advanced Geographic Information Systems and Remote Sensing</td>
+    	<td colspan="2" class="academy-course">Geospatial Applications Worksite Experience</td>
 	</tr>
 </table>
