--- a/_includes/course-schedules/hotel-restaurant-management.html
+++ b/_includes/course-schedules/hotel-restaurant-management.html
@@ -38,7 +38,7 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-		<td colspan="2" class="academy-course">Introduction to the Hotel and Restaurant Management Industry 877M</td>
+		<td colspan="2" class="academy-course">Introduction to the Hotel and Restaurant Management Industry</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -46,6 +46,6 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td colspan="3" class="academy-course">Management and Leadership in Hotels and Restaurants 880M</td>
+    <td colspan="3" class="academy-course">Management and Leadership in Hotels and Restaurants</td>
 	</tr>
 </table>
