--- a/_includes/course-schedules/marketing.html
+++ b/_includes/course-schedules/marketing.html
@@ -29,7 +29,7 @@
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-		<td class="academy-course">Principles of Business and Management 551M</td>
+		<td class="academy-course">Principles of Business and Management</td>
 	</tr>
 	<tr>
 		<th scope="row">Eleventh Grade</th>
@@ -38,8 +38,8 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-    <td class="academy-course">Principles of Accounting and Finance – Honors 561M</td>
-		<td class="academy-course">Principles of Marketing – Honors 565M</td>
+    	<td class="academy-course">Principles of Accounting and Finance – Honors</td>
+		<td class="academy-course">Principles of Marketing – Honors</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -47,8 +47,8 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-    <td>Elective available</td>
+    	<td>Elective available</td>
 		<td>Elective available</td>
-    <td class="academy-course">Advanced Marketing - Honors 564M</td>
+    	<td class="academy-course">Advanced Marketing - Honors</td>
 	</tr>
 </table>
