--- a/_includes/course-schedules/systems-project-engineering.html
+++ b/_includes/course-schedules/systems-project-engineering.html
@@ -38,7 +38,7 @@
 		<td class="required">Chemistry required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-    <td colspan="2" class="academy-course">Systems Management Solutions G/T 860M</td>
+    <td colspan="2" class="academy-course">Systems Management Solutions G/T</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -46,6 +46,6 @@
 		<td class="required">Mathematics required</td>
 		<td>Elective available</td>
 		<td>Elective available</td>
-		<td colspan="3" class="academy-course">Systems Engineering Innovation G/T 864M</td>
+		<td colspan="3" class="academy-course">Systems Engineering Innovation G/T</td>
 	</tr>
 </table>
