--- a/_includes/related-academies/hotel-restaurant-management.html
+++ b/_includes/related-academies/hotel-restaurant-management.html
@@ -1,7 +1,4 @@
 <ul>
-  <li><a href="/academy/accounting/">Accounting Academy</a></li>
-  <li><a href="/academy/automotive-technology/">Automotive Technology</a></li>
-  <li><a href="/academy/career-research-development/">Career Research And Development Academy</a></li>
   <li><a href="/academy/culinary-science/">Culinary Science</a></li>   
-  <li><a href="/academy/finance/">Academy of Finance</a></li>
+  <li><a href="/academy/finance/">Finance</a></li>
 </ul>
