--- a/_includes/certifications/construction-management.html
+++ b/_includes/certifications/construction-management.html
@@ -1,1 +1,1 @@
-<p>Students can pursue a construction apprenticeship in postsecondary programs or complete NCCER certification.</p>
+<p>Students can pursue a construction apprenticeship in postsecondary programs and complete NCCER certification.</p>
