--- a/_includes/course-schedules/teacher-academy-maryland.html
+++ b/_includes/course-schedules/teacher-academy-maryland.html
@@ -38,8 +38,8 @@
 		<td class="required">Science required</td>
 		<td class="required">Social Studies required</td>
 		<td>Elective available</td>
-    <td class="academy-course">Foundations of Curriculum and Instruction 6535</td>
-		<td class="academy-course">Teaching as a Profession - G/T 659M</td>
+    <td class="academy-course">Foundations of Curriculum and Instruction</td>
+		<td class="academy-course">Teaching as a Profession - G/T</td>
 	</tr>
 	<tr>
 		<th scope="row">Twelfth Grade</th>
@@ -49,6 +49,6 @@
 		<td>Elective available</td>
     <td>Elective available</td>
 		<td>Elective available</td>
-    <td class="academy-course">Field Experience in Education (Teacher Academy) - G/T 660M, 661M, 662M</td>
+    <td class="academy-course">Field Experience in Education (Teacher Academy) - G/T</td>
 	</tr>
 </table>
