--- a/_includes/curriculum/architectural-design.html
+++ b/_includes/curriculum/architectural-design.html
@@ -1,5 +1,2 @@
 <h2 style="width: 90%;"><i class="fa fa-file-text fa-2" style="color: #7DC254;"></i> Curriculum</h2>
-<ul>
-  <li><a href="http://www.hcpss.org/f/academics/docs_archdesign.pdf">Architectural Design</a></li>
-  <li><a href="http://www.hcpss.org/f/academics/docs_advarchitectural.pdf">Advanced Architectural Design</a></li>
-</ul>
+<p>Information forthcoming.</p>
