--- a/_includes/related-academies/biotechnology.html
+++ b/_includes/related-academies/biotechnology.html
@@ -1,13 +1,4 @@
 <ul>
-  <li><a href="/academy/aerospace-engineering/">Aerospace Engineering Academy</a></li>
-  <li><a href="/academy/architectural-design/">Architectural Design</a></li>
-  <li><a href="/academy/computer-programming/">Computer Programming</a></li>
-  <li><a href="/academy/construction-management/">Construction Management</a></li>
-  <li><a href="/academy/culinary-science/">Culinary Science</a></li>
-  <li><a href="/academy/cybersecurity-networking/">Cybersecurity Networking</a></li>
-  <li><a href="/academy/engineering/">Engineering Academy</a></li>
-  <li><a href="/academy/health-professions/">Academy of Health Professions</a></li>
-  <li><a href="/academy/marketing/">Marketing Academy</a></li>
-  <li><a href="/academy/systems-project-engineering/">Systems And Project Engineering</a></li>
-  <li><a href="/academy/visual-communications/">Visual Communications</a></li>
+  <li><a href="/academy/engineering/">Engineering</a></li>
+  <li><a href="/academy/health-professions/">Health Professions</a></li>
 </ul>
