--- a/_includes/related-academies/construction-management.html
+++ b/_includes/related-academies/construction-management.html
@@ -1,9 +1,4 @@
 <ul>
-  <li><a href="/academy/aerospace-engineering/">Aerospace Engineering Academy</a></li>
   <li><a href="/academy/architectural-design/">Architectural Design</a></li>
-  <li><a href="/academy/biotechnology/">Biotechnology Academy</a></li>
-  <li><a href="/academy/computer-programming/">Computer Programming</a></li>
-  <li><a href="/academy/cybersecurity-networking/">Cybersecurity Networking</a></li>
-  <li><a href="/academy/engineering/">Engineering Academy</a></li>
-  <li><a href="/academy/systems-project-engineering/">Systems And Project Engineering</a></li>
+  <li><a href="/academy/hvac/">Heating, Ventilating, Air Conditioning (HVAC)</a></li>
 </ul>
