--- a/_includes/related-academies/culinary-science.html
+++ b/_includes/related-academies/culinary-science.html
@@ -1,9 +1,4 @@
 <ul>
-  <li><a href="/academy/accounting/">Accounting Academy</a></li>
-  <li><a href="/academy/automotive-technology/">Automotive Technology</a></li>
-  <li><a href="/academy/biotechnology/">Biotechnology Academy</a></li>
-  <li><a href="/academy/career-research-development/">Career Research And Development Academy</a></li>
-  <li><a href="/academy/finance/">Academy of Finance</a></li>
-  <li><a href="/academy/health-professions/">Academy of Health Professions</a></li>
-  <li><a href="/academy/hotel-restaurant-management/">Hotel And Restaurant Management</a></li>
+  <li><a href="/academy/finance/">Finance</a></li>
+  <li><a href="/academy/hotel-restaurant-management/">Hotel and Restaurant Management</a></li>
 </ul>
