--- a/_includes/related-academies/cybersecurity-networking.html
+++ b/_includes/related-academies/cybersecurity-networking.html
@@ -1,12 +1,5 @@
 <ul>
-  <li><a href="/academy/aerospace-engineering/">Aerospace Engineering Academy</a></li>
-  <li><a href="/academy/architectural-design/">Architectural Design</a></li>
-  <li><a href="/academy/biotechnology/">Biotechnology Academy</a></li>
   <li><a href="/academy/computer-programming/">Computer Programming</a></li>
-  <li><a href="/academy/construction-management/">Construction Management</a></li>
-  <li><a href="/academy/engineering/">Engineering Academy</a></li>
+  <li><a href="/academy/engineering/">Engineering</a></li>
   <li><a href="/academy/homeland-security/">Homeland Security And Emergency Management</a></li>
-  <li><a href="/academy/marketing/">Marketing Academy</a></li>
-  <li><a href="/academy/systems-project-engineering/">Systems And Project Engineering</a></li>
-  <li><a href="/academy/visual-communications/">Visual Communications</a></li>
 </ul>
