--- a/_includes/related-academies/finance.html
+++ b/_includes/related-academies/finance.html
@@ -1,7 +1,4 @@
 <ul>
-  <li><a href="/academy/accounting/">Accounting Academy</a></li>
-  <li><a href="/academy/automotive-technology/">Automotive Technology</a></li>
-  <li><a href="/academy/career-research-development/">Career Research And Development Academy</a></li>
-  <li><a href="/academy/culinary-science/">Culinary Science</a></li>
-  <li><a href="/academy/hotel-restaurant-management/">Hotel And Restaurant Management</a></li>
+  <li><a href="/academy/accounting/">Accounting</a></li>
+  <li><a href="/academy/marketing/">Marketing</a></li>
 </ul>
