--- a/_includes/related-academies/teacher-academy-maryland.html
+++ b/_includes/related-academies/teacher-academy-maryland.html
@@ -1,3 +1,3 @@
 <ul>
-  <li><a href="/academy/child-development/">Aerospace Engineering Academy</a></li>
+  <li><a href="/academy/child-development/">Child Development</a></li>
 </ul>
