--- a/_includes/related-academies/accounting.html
+++ b/_includes/related-academies/accounting.html
@@ -1,7 +1,5 @@
 <ul>
-  <li><a href="/academy/automotive-technology/">Automotive Technology</a></li>
-  <li><a href="/academy/career-research-development/">Career Research And Development Academy</a></li>
-  <li><a href="/academy/culinary-science/">Culinary Science</a></li>
   <li><a href="/academy/finance/">Academy of Finance</a></li>
-  <li><a href="/academy/hotel-restaurant-management/">Hotel And Restaurant Management</a></li>
+  <li><a href="/academy/career-research-development/">Career Research And Development Academy</a></li>
+  <li><a href="/academy/marketing/">Marketing Academy</a></li>
 </ul>
