--- a/_includes/related-academies/marketing.html
+++ b/_includes/related-academies/marketing.html
@@ -1,9 +1,5 @@
 <ul>
-  <li><a href="/academy/aerospace-engineering/">Aerospace Engineering Academy</a></li>
-  <li><a href="/academy/biotechnology/">Biotechnology Academy</a></li>
-  <li><a href="/academy/computer-programming/">Computer Programming</a></li>
-  <li><a href="/academy/cybersecurity-networking/">Cybersecurity Networking</a></li>
-  <li><a href="/academy/engineering/">Engineering Academy</a></li>
-  <li><a href="/academy/systems-project-engineering/">Systems And Project Engineering</a></li>
-  <li><a href="/academy/visual-communications/">Visual Communications</a></li>
+	<li><a href="/academy/accounting/">Accounting</a></li>
+	<li><a href="/academy/finance/">Finance</a></li>
+	<li><a href="/academy/career-research-development/">Career Research And Development</a></li>
 </ul>
