--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   href="https://s3.amazonaws.com/hcpss.web.site/images/normalize.css">
 
 <!-- <link rel="stylesheet" type='text/css'
-  href="http://www.hcpss.org/f/js/normalize.css"> -->
+  href="https://www.hcpss.org/f/js/normalize.css"> -->
 <link rel="stylesheet" type='text/css'
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- <link rel="stylesheet" type="text/css"
@@ -26,7 +26,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,800|Source+Sans+Pro" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://www.hcpss.org/f/mrb/newdesign/main.min.css">
 <!-- <link rel="stylesheet" type="text/css"
-  href="http://www.hcpss.org/f/js/main.css" > -->
+  href="https://www.hcpss.org/f/js/main.css" > -->
 
 
 </head>
